@@ -6,6 +6,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -19,7 +20,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableConfigurationProperties({JwtProperties.class, AppCorsProperties.class})
@@ -28,13 +28,39 @@ public class SecurityConfig {
     SecurityFilterChain securityFilterChain(HttpSecurity http, JwtAuthenticationFilter jwtAuthenticationFilter) throws Exception {
         http
                 .csrf(csrf -> csrf.disable())
-                .cors(cors -> {
-                })
+                .cors(Customizer.withDefaults())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/login", "/api/public/**", "/api/health", "/actuator/health").permitAll()
                         .requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/services", "/api/parts").authenticated()
+
+                        .requestMatchers(HttpMethod.GET, "/api/customers", "/api/customers/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.POST, "/api/customers").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.PUT, "/api/customers/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.DELETE, "/api/customers/{id}").hasRole("ADMIN")
+
+                        .requestMatchers(HttpMethod.GET, "/api/vehicles", "/api/vehicles/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.POST, "/api/vehicles").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.PUT, "/api/vehicles/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.DELETE, "/api/vehicles/{id}").hasRole("ADMIN")
+
+                        .requestMatchers(HttpMethod.GET, "/api/services", "/api/services/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.POST, "/api/services").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/services/{id}").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/services/{id}").hasRole("ADMIN")
+
+                        .requestMatchers(HttpMethod.GET, "/api/parts", "/api/parts/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.POST, "/api/parts").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/parts/{id}").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/parts/{id}").hasRole("ADMIN")
+
+                        .requestMatchers(HttpMethod.GET, "/api/service-orders", "/api/service-orders/{id}").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.POST, "/api/service-orders").hasAnyRole("ADMIN", "MECHANIC", "ATTENDANT")
+                        .requestMatchers(HttpMethod.PATCH, "/api/service-orders/{id}/approve", "/api/service-orders/{id}/status", "/api/service-orders/{id}/diagnosis")
+                        .hasAnyRole("ADMIN", "MECHANIC")
+
+                        .requestMatchers(HttpMethod.GET, "/api/reports/average-execution-time").hasRole("ADMIN")
+
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -48,7 +74,7 @@ public class SecurityConfig {
         configuration.setAllowedOrigins(
                 Arrays.stream(properties.allowedOrigins().split(","))
                         .map(String::trim)
-                        .collect(Collectors.toList()));
+                        .toList());
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
